--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 .login-button {
     font-family:FontReg;
-    margin-right:5px;
+    
     background-color: rgb(255, 255, 255);
     color:#000000;
     font-size: 14px;
@@ -183,6 +183,14 @@
       .card-header {
         font-family:FontBold;
       }
+
+      .logo-image{
+        width: 46px;
+        height: 46px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-top: -6px;
+    }
 
       
 
