--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 @font-face {
-    font-family: Font;
-    src: url(Chopin-Trial-Black.woff);
-  }
+  font-family: Font;
+  src: url(Chopin-Trial-Black.woff);
+}
 
-  @font-face {
-    font-family: FontBold;
-    src: url(Chopin-Trial-Bold.woff);
-  }
+@font-face {
+  font-family: FontBold;
+  src: url(Chopin-Trial-Bold.woff);
+}
 
-  @font-face {
-    font-family: FontReg;
-    src: url(Chopin-Trial-Regular.woff);
-  }
+@font-face {
+  font-family: FontReg;
+  src: url(Chopin-Trial-Regular.woff);
+}
 
 .logo {
-  float:left;
-  position:relative;
-  height:75%;
-  width:75%;
+  float: left;
+  position: relative;
+  height: 75%;
+  width: 75%;
 }
 
 .navbar-brand {
-  font-family:FontBold;
-  margin-left:5px;
-  font-weight:500;
+  font-family: FontBold;
+  margin-left: 5px;
+  font-weight: 500;
   color: rgb(0, 0, 0);
   font-size: 24px;
   transition: 0.3s color;
@@ -31,259 +31,273 @@
 }
 
 .navbar {
-    font-size:25px;
-    background-color:#ACE2E1;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0.2,.5);
-    height:80px;
-    margin:10px;
-    border-radius: 20px;
-    padding: 0.5rem;
+  font-size: 25px;
+  background-color: #ACE2E1;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0.2, .5);
+  height: 80px;
+  margin: 10px;
+  border-radius: 20px;
+  padding: 0.5rem;
 }
 
 .login-button {
-    font-family:FontReg;
-    
-    background-color: #29317C;
-    color:#ffffff;
-    
-    font-size: 20px;
-    padding: 8px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    transition: 0.3s background-color;
+  font-family: FontReg;
+
+  background-color: #29317C;
+  color: #ffffff;
+
+  font-size: 20px;
+  padding: 8px 20px;
+  border-radius: 50px;
+  text-decoration: none;
+  transition: 0.3s background-color;
 
 }
+
 .login-button:hover {
-  color:#000;
-    background-color: #c0f8f7;
-    font-family:FontBold;
+  color: #000;
+  background-color: #c0f8f7;
+  font-family: FontBold;
 }
+
 .navbar-toggler {
-    border:none;
-    font-size:1.25rem;
+  border: none;
+  font-size: 1.25rem;
 }
 
-.navbar-toggler:focus, .btn-close:focus {
-    box-shadow: none;
-    outline:none;
+.navbar-toggler:focus,
+.btn-close:focus {
+  box-shadow: none;
+  outline: none;
 }
 
-.nav-link{
-    
-    font-family:FontReg;
-    
-    color:rgb(8, 1, 68);
-    font-weight:500;
-    position: relative;
-    
+.nav-link {
+
+  font-family: FontReg;
+
+  color: rgb(8, 1, 68);
+  font-weight: 500;
+  position: relative;
+
 }
 
-.nav-link:hover, .nav-link.active {
-    color:#000;
-    font-family:FontBold;
-    transition: 0.5s;
+.nav-link:hover,
+.nav-link.active {
+  color: #000;
+  font-family: FontBold;
+  transition: 0.5s;
 }
 
 
 
-    .nav-link::before {
-        content:"";
-        position: absolute;
-        bottom:0;
-        left:50%;
-        transform: translateX(-50%);
-        width:0;
-        height:2px;
-        background-color:rgb(0, 92, 12);
-        visibility: hidden;
-        transition: 0.3s ease-in-out;
-    }
+.nav-link::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 2px;
+  background-color: rgb(0, 92, 12);
+  visibility: hidden;
+  transition: 0.3s ease-in-out;
+}
 
-    .nav-link:hover::before, .nav-link.active::before{
-        width: 100%;
-        visibility: visible;
-    }
-    
+.nav-link:hover::before,
+.nav-link.active::before {
+  width: 100%;
+  visibility: visible;
+}
 
-    .carousel-inner img {
-        overflow-x: hidden;
-          overflow-y: hidden;
-          object-fit: cover !important;
-          background-size:cover;
-      }
-      
-      .carousel-item:after {
-        content:"";
-        display:block;
-        position:absolute;
-        top:0;
-        bottom:0;
-        left:0;
-        right:0;
-        /*set overlay of carousel */
-        background-image: linear-gradient(to top, rgba(0, 0, 0, 0.247), rgba(3, 34, 75, 0.24));
-      }
-      
-      .carousel {
-        width: 100%;
-        height: 100%;
-        object-fit:cover;
-        
-      }
-      .carousel-container {
-        margin:0;
-        padding: 0;
-      }
 
-      .carousel-indicators img{
-        width: 80px;
-        height: 50px;
-        display:block;
-        
-      }
+.carousel-inner img {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  object-fit: cover !important;
+  background-size: cover;
+}
 
-      .carousel-indicators button{
-        width: max-content !important;
-      }
-      
-      .carousel-indicators{
-        position: unset;
-      }
+.carousel-item:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /*set overlay of carousel */
+  background-image: linear-gradient(to bottom, #ace2e12a 90%, #ace2e1);
 
-      .carousel-indicators button.active img{
-        border: 2px solid rgb(9, 107, 0);
-      }
+}
 
-      
+.carousel-image {
+  mask-image: linear-gradient(black, transparent);
+  -webkit-mask-image: linear-gradient(black 90%, transparent);
+}
 
-      
 
-      .fixed-container {
-        position:absolute;
-        z-index: -1;
-        width:100%;
-        height:800px;
-        background-position: center;
-        background-size: cover;
-        background-color: #ACE2E1;
-        background-attachment: fixed;
-        
-      }
+.carousel {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
-      
+}
 
-      .content-container {
-        position:relative;
-        margin-top: 30px;
-        overflow-x: hidden;
-          overflow-y: hidden;
-        z-index: 5;
-        background-image: url(About.png);
-        
-        width:100%;
-        float:left;
-        background-attachment: fixed;
-        
-      }
+.carousel-container {
+  margin: 0;
+  padding: 0;
+}
 
-      .content-container p{
-        font-family:FontBold;
-        margin: 2%; 
-        font-weight: bold;
-        color: #000000;
-        box-shadow: 0 2px 4px 0 rgba(0.1,0.1,0.1,.5);
-        background: linear-gradient(to right, #023f00, #379624,#087386, #24b17b);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
-        
-      }
+.carousel-indicators img {
+  width: 80px;
+  height: 50px;
+  display: block;
 
-      .content-container1 {
-        
-        position:relative; 
-        overflow-x: hidden;
-          overflow-y: hidden;
-        z-index: 5;
-        background-color: #ffffff;
-        padding:5px;
-        width:100%;
-        float:left;
-      }
+}
 
-      .content-container2 {
-        position:relative;
-        overflow-x: hidden;
-          overflow-y: hidden;
-        z-index: 5;
-        background-color: #ffffff;
-        padding:5px;
-        width:100%;
-        float:left;
-      }
+.carousel-indicators button {
+  width: max-content !important;
+}
 
-      .content-container3 {
-        
-        position:relative; 
-        overflow-x: hidden;
-          overflow-y: hidden;
-        z-index: 5;
-        background-color: #ffffff;
-        padding:5px;
-        width:100%;
-        float:left;
-      }
+.carousel-indicators {
+  position: unset;
+}
 
-      .header {
-        font-family:FontBold;
-      }
+.carousel-indicators button.active img {
+  border: 2px solid rgb(9, 107, 0);
+}
 
-      .nav-item{
-          padding-left:10px;
-          padding-right:10px;
-          padding-inline-end: 55px;
-          
-        }
+.fixed-container {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-color: #ACE2E1;
+  background-attachment: fixed;
+
+}
+
+.content-container {
+  position: relative;
+  /*margin-top: 30px;*/
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-image: url(About.png);
+
+  width: 100%;
+  float: left;
+  background-attachment: fixed;
+
+}
+
+.content-container p {
+  font-family: FontBold;
+  margin: 1%;
+  font-weight: bold;
+  color: #000000;
+  box-shadow: 0 2px 4px 0 rgba(0.1, 0.1, 0.1, .5);
+  background: linear-gradient(to right, #023f00, #379624, #087386, #24b17b);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+
+}
+
+.content-container1 {
+
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-color: #ffffff;
+  padding: 5px;
+  width: 100%;
+  float: left;
+}
+
+.content-container2 {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-color: #ffffff;
+  padding: 5px;
+  width: 100%;
+  float: left;
+}
+
+.content-container3 {
+
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-color: white;
+
+  width: 100%;
+  float: left;
+}
+
+.content-container3 h3 {
+  font-family: FontBold;
+  margin-bottom: 2%;
+}
+
+.header {
+  font-family: FontBold;
+}
+
+.nav-item {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-inline-end: 55px;
+
+}
 
 .accordion {
-  box-shadow: 0 2px 25px 0 rgba(110,130,208,.18);
-  background:transparent;
+  box-shadow: 0 2px 25px 0 rgba(110, 130, 208, .18);
+  background: transparent;
 
 }
 
 .accordion-item {
-  margin-bottom: 10px;
+  margin: 1%;
   background-color: #24b17b;
   border: none;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1), -2px, 2px, 8px rgba(0,0,0,0.1);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1), -2px, 2px, 8px rgba(0, 0, 0, 0.1);
 }
+
 .accordion-body {
-  background-color:#d8f7ef ;
-  font-family:FontReg;
+  background-color: #d8f7ef;
+  font-family: FontReg;
 }
 
 .accordion-button {
-  font-family:FontBold;
+  font-family: FontBold;
   background-color: #26a574 !important;
-  color:#fff !important;
-  font-size:0.8rem;
-  background:transparent;
-  outline:none;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #fff !important;
+  font-size: 0.8rem;
+  background: transparent;
+  outline: none;
+  border: 1px solid rgba(1, 87, 47, 0.1);
   font-weight: 500;
-  position:relative;
+  position: relative;
 }
 
-.accordion-button:active, .accordion-button:focus{
-  border:none !important;
-  background:#19704f !important;
+.accordion-button:active,
+.accordion-button:focus {
+  border: none !important;
+  background: #19704f !important;
 }
 
-.accordion-button:hover{
-  background:#087386 !important;
+.accordion-button:hover {
+  background: #087386 !important;
 }
 
 svg {
-  fill:#ffffff;
+  fill: #ffffff;
 }
 
 .accordion-button::after {
@@ -297,12 +311,3 @@ svg {
 
   transition: .5s !important;
 }
-
-
-      
-
-       
-      
-
-
-      
