--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@
   overflow-x: hidden;
   overflow-y: hidden;
   z-index: 5;
-  background-image: url(About.png);
+  background-image: linear-gradient(to right, #ffb1e849, #23919150, #5456eb71, #df99ff3f),url(About.png);
   
   width: 100%;
   float: left;
@@ -199,9 +199,7 @@
   font-weight: bold;
   color: #000000;
   box-shadow: 0 2px 4px 0 rgba(0.1, 0.1, 0.1, .5);
-  background: linear-gradient(to right, #ffb1e8, #912389, #5456eb, #df99ff);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
+
 
 }
 
@@ -215,13 +213,14 @@
   padding: 5px;
   width: 100%;
   float: left;
+  box-shadow: 0 5px 10px 20px rgba(0.1, 0.1, 0.1, .5);
 }
 
 .content-container2 {
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
-  z-index: 5;
+  z-index: 3;
   background-color: #ffffff;
   padding: 5px;
   width: 100%;
@@ -314,6 +313,18 @@ svg {
 
 .about-text {
   font-family:FontBold;
-  font-size: 25px;
+  
+}
+.about-para {
+  font-family:FontReg;
+  font-size: 17px;
+}
+.about-content {
+  background-image: linear-gradient(to right, #d8f7ef0c,#d8f7ef);
+  padding:10px;
+}
+.about-content1 {
+  background-image: linear-gradient(to right, #d8f7ef, #d8f7ef0c);
+  padding:23px;
 }
 
