--- a/style.css
+++ b/style.css
@@ -148,6 +148,21 @@
   padding: 0;
 }
 
+/*Carousel Text Title*/
+.text-title {
+  font-size: 25px;
+  color:rgb(242, 255, 250);
+  font-family: FontBold;
+}
+/*Carousel Text Caption*/
+.text-bg {
+  color:rgb(226, 243, 239);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.075),rgba(0, 0, 0, 0.164));
+  font-family: FontReg;
+  
+  border-radius: 20px;
+}
+
 .carousel-indicators img {
   width: 80px;
   height: 50px;
@@ -347,6 +362,7 @@ svg {
   text-align: justify;
   text-justify: inter-word;
 }
+
 .about-content {
   background-image: linear-gradient(to right, #d8f7ef0c,#d8f7ef);
   padding:10px;
@@ -546,3 +562,5 @@ svg {
   height: 1px;
   background: black;
 }
+
+
