--- a/style.css
+++ b/style.css
@@ -282,6 +282,17 @@
   overflow-y: hidden;
   z-index: 5;
   background-color: white;
+  transition: all 0.5s;
+  width: 100%;
+  float: left;
+}
+.content-container8 {
+
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-color: white;
   
   width: 100%;
   float: left;
@@ -330,7 +341,7 @@
 
 .accordion {
   background: transparent;
-
+  transition: all 0.5s;
 }
 
 .accordion-item {
@@ -370,6 +381,7 @@
 
 .accordion-button:hover {
   background: #e4f5f8 !important;
+  transform: scale(1.05);
 }
 
 svg {
@@ -606,4 +618,9 @@ svg {
 
 .card {
   background: none !important;
+  transition: all 0.5s;
+}
+
+.content-container3:hover {
+  transform: scale(1.02);
 }
