--- a/style.css
+++ b/style.css
@@ -274,6 +274,18 @@
   float:left;
   
 }
+.content-container9 {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.459),rgba(255, 255, 255, 0.459));
+  
+  width: 100%;
+  float: left;
+  
+  
+}
 
 .content-container3 {
 
