--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 
 }
 
-.navbar {
+.navbar-home {
   font-size: 25px;
   background-color: #EDE4FF;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0.2, .5);
@@ -40,7 +40,7 @@
   padding: 0.5rem;
 }
 
-.login-button {
+.home-login-button {
   font-family: FontReg;
 
   background-color: #8d48a1;
@@ -54,7 +54,7 @@
 }
 
 
-.login-button:hover {
+.home-login-button:hover {
   color: #000;
   background-color: #ffffff;
   font-family: FontBold;
@@ -118,7 +118,7 @@
   opacity: 60%;
 }
 
-.carousel-item:after {
+.home-carousel-item:after {
   z-index: -4;
   content: "";
   display: block;
@@ -132,7 +132,7 @@
 
 }
 
-.carousel-image {
+.home-carousel-image {
   mask-image: linear-gradient(black, transparent);
   -webkit-mask-image: linear-gradient(black 90%, transparent);
 }
@@ -152,7 +152,7 @@
 
 
 /*Carousel Text Title*/
-.text-title {
+.home-text-title {
   text-shadow: 2px 2px 7px black;
   font-size: 50px;
   color: #EDE4FF;
@@ -171,7 +171,7 @@
 
 }
 
-.caro-button {
+.home-caro-button {
   z-index: 10;
   font-family: FontReg;
   background-color: #8d48a1;
@@ -187,7 +187,7 @@
   margin-bottom: 12%;
 }
 
-.caro-button:hover {
+.home-caro-button:hover {
   color: #000;
   background-color: #ffffff;
   font-family: FontBold;
@@ -209,11 +209,11 @@
   position: unset;
 }
 
-.carousel-indicators button.active img {
+.home-carousel-indicators button.active img {
   border: 2px solid rgb(142, 59, 145);
 }
 
-.fixed-container {
+.home-fixed-container {
   position: absolute;
   z-index: -1;
   width: 100%;
@@ -594,4 +594,120 @@ svg {
   background: #4C8BF5;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+
+/* Booking.php */
+.navbar-book {
+  font-size: 25px;
+  background-color: #DCE7FA;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0.2, .5);
+  height: 80px;
+  margin: 10px;
+  border-radius: 20px;
+  padding: 0.5rem;
+}
+
+
+.book-login-button {
+  font-family: FontReg;
+
+  background-color: #48a198;
+  color: #ffffff;
+
+  font-size: 20px;
+  padding: 8px 20px;
+  border-radius: 50px;
+  text-decoration: none;
+  transition: 0.3s background-color;
+}
+
+
+.book-login-button:hover {
+  color: #000;
+  background-color: #ffffff;
+  font-family: FontBold;
+}
+
+.book-text-title {
+  text-shadow: 2px 2px 7px black;
+  font-size: 50px;
+  color: #DCE7FA;
+  font-family: FontBold;
+}
+
+.book-caro-button {
+  z-index: 10;
+  font-family: FontReg;
+  background-color: #48a198;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 8px 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  transition: 0.3s background-color;
+}
+
+.book-caro-button:hover {
+  color: #000;
+  background-color: #ffffff;
+  font-family: FontBold;
+}
+
+.book-carousel-indicators button.active img {
+  border: 2px solid rgb(59, 98, 145);
+}
+
+.book-carousel-item:after {
+  z-index: -4;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /*set overlay of carousel */
+  background-image: linear-gradient(to bottom, #000000 90%, #DCE7FA);
+
+}
+
+.book-carousel-image {
+  mask-image: linear-gradient(black, transparent);
+  -webkit-mask-image: linear-gradient(black 90%, transparent);
+}
+
+.book-fixed-container {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-color: #DCE7FA;
+  background-attachment: fixed;
+}
+
+/*
+.booking-container {
+  background-image: linear-gradient(to top, #d6ddff 10%,#c4fff5);
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  position:relative;
+  
+  
+}
+*/
+.book-content-container1 {
+
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  z-index: 5;
+  background-color: #DCE7FA;
+  padding: 5px;
+  width: 100%;
+  float: left;
+  box-shadow: 0 2px 4px 0 rgba(0.1, 0.1, 0.1, .5);
+  mask-image: linear-gradient(to top, black, transparent);
+  -webkit-mask-image: linear-gradient(black 20%, transparent);
 }
